# PetHeaven

./: README.md  url.txt
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
backend (not adding)/: .env  Cargo.toml
backend (not adding)/migrations/: 20241109195204_foundation.sql
backend (not adding)/src/: main.rs
backend (not adding)/src/design considerations/: code guidelines.txt
backend (not adding)/src/postgres/: mod.rs  store.rs
frontend/: .firebaserc  package-lock.json  package.json
frontend/.firebase/: hosting.YnVpbGQ.cache
frontend/src/: index.css  index.js
frontend/src/components/header/: headerbar.css  headerbar.jsx  headerbutton.jsx  index.jsx
frontend/src/components/parallax/: index.jsx  parallaxpage.css  parallaxpage.jsx
frontend/src/components/petcard/: index.jsx  petcard.css  petcard.jsx  petinfo.css  petinfo.jsx
frontend/src/components/popform/: criterias.md  index.jsx  inputchecks.jsx  popform.css  popform.jsx
frontend/src/css/: adopt.css  home.css  index.css  review.css  support.css
frontend/src/data/: pets.js
frontend/src/design considerations/: code guidelines.txt  req.txt
frontend/src/pages/: Test.js  adopt.js  home.js  member.js  release.js  review.js  support.js
