[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
axum = { version = "0.6.4", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.3.0", features = ["cors"] }
sqlx = { version = "0.6.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }

[profile.dev.package.sqlx-macros]
opt-level = 3
